--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <td>
         <h1>Mario</h1>
       </td>
-      <td><img height="200" width="200" src="https://hosting.photobucket.com/images/i/Bebitis75/Me_on_the_beach.png?width=450&height=278&crop=fill" alt="photo"></td>
+      <td><img height="200" width="200" src="Me on the beach.jpg" alt="photo"></td>
     </tr>
   </table>
   <h3>Careers I want to study</h3>
