--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Welcome to Mario's personal site</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -15,12 +16,16 @@
       <td><img height="200" width="200" src="Me on the beach.jpg" alt="photo"></td>
     </tr>
   </table>
-  <h3>Careers I want to study</h3>
+<ul>
+  <li><h3>Careers I want to study</h3></li>
+</ul>
   <p>Professional Software engineer</p>
-  <p><em>Professional Fanancial advicer and <b>investor</b></em></p>
+  <p><em>Professional Financial advicer and <b>investor</b></em></p>
   <p>Private pilot</p><a href="https://en.wikipedia.org/wiki/Cessna_152">First Plane I want to Fly</a>
   <hr>
-  <h3>Hobbies</h3>
+<ul>
+  <li><h3>Hobbies</h3></li>
+</ul>
   <p>I like to repair electronics, <br>socialize with people, ride bikes <br>read about airplanes and fly them in Xplane 11...the rest is for you to discover</p>
   <ul>
     <em>
@@ -29,7 +34,9 @@
       <li>Male, still single lol</li>
     </em>
   </ul>
-  <h3>Favorite Artists</h3>
+<ul>
+  <li><h3>Favorite Artists</h3></li>
+</ul>
   <ol>
     <li>Post Malone</li>
     <li>Harry Styles</li>
