better than ever!

--- a/Contactme.html
+++ b/Contactme.html
@@ -2,20 +2,13 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Contacte Me</title>
     <link rel="stylesheet" href="css/styles.css">
   </head>
-  <body>
-    <h1>My contact details</h1>
-    <a href="https://www.instagram.com/?hl=en">follow me on instagram</a>
-    <form  action="mailto:mariorv07@outlook.com" method="post" enctype="text/plain">
-      <label>Your Name:</label>
-      <input type="text" name="Your Name" value=""><br>
-      <label>Your Email:</label>
-      <input type="email" name="Your email" value=""><br>
-      <label>Your Message:</label><br>
-<textarea name="name" rows="8" cols="20"></textarea>
-<input type="submit" name="" value="send">
-    </form>
-  </body>
+  <body class="ct">
+<div class="ctbg">
+  <a class="ig" href="https://www.instagram.com/?hl=en">Follow me on Instagram and dm me!</a>
+  <a class="music"href="Musicmadebyme.html">Hear the music I've made!</a>
+</div>
+</body>
 </html>
