--- a/index.html
+++ b/index.html
@@ -3,89 +3,55 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Welcome to Mario's personal site</title>
+  <title>Hi I'm Mario</title>
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="favicon.ico">
 </head>
 
 <body>
-  <table cellspacing="15">
-    <tr>
-      <td>
-        <h1>Mario</h1>
-      </td>
-      <td><img height="200" width="200" src="Me on the beach.jpg" alt="photo"></td>
-    </tr>
-  </table>
-<ul>
-  <li><h3>Careers I want to study</h3></li>
-</ul>
-  <p>Professional Software engineer</p>
-  <p><em>Professional Financial advicer and <b>investor</b></em></p>
-  <p>Private pilot</p><a href="https://en.wikipedia.org/wiki/Cessna_152">First Plane I want to Fly</a>
-  <hr>
-<ul>
-  <li><h3>Hobbies</h3></li>
-</ul>
-  <p>I like to repair electronics, <br>socialize with people, ride bikes <br>read about airplanes and fly them in Xplane 11...the rest is for you to discover</p>
-  <ul>
-    <em>
-      <li>Prefered OS:MacOS</li>
-      <li>Born:Dreamland</li>
-      <li>Male, still single lol</li>
-    </em>
-  </ul>
-<ul>
-  <li><h3>Favorite Artists</h3></li>
-</ul>
-  <ol>
-    <li>Post Malone</li>
-    <li>Harry Styles</li>
-    <li>Billie Eilish</li>
-    <li>One Republic</li>
-  </ol>
-  <hr>
 
-  <table>
-    <tr>
-      <td>
-        <table cellspacing="10">
-          <tr>
-            <th>Things I like</th>
-            <th>Things I don't like</th>
-          </tr>
-          <tr>
-<td>Skydiving</td>
-<td>Cleaning a toilet</td>
-          </tr>
-        </table>
-      </td>
-      <td>
-        <table cellspacing="10">
-          <tr>
-            <th>Foods I like</th>
-            <th>Foods I hate</th>
-          </tr>
-          <tr>
-            <td>Sushi</td>
-            <td>Moro</td>
-          </tr>
-        </table>
-      </td>
-    </tr>
-  </table>
+  <div class="div-1">
+    <h1 class="">Hi, I'm Mario</h1>
+    <p>A <span class="student">student</span></p>
+    <img class="mountain" src="images/mountain.png" alt="mountainscenery">
+    <img class="cloud-left" src="images/cloud.png" alt="cloud">
+    <img class="cloud-right-1" src="images/cloud.png" alt="cloud">
+    <img class="cloud-right-2" src="images/cloud.png" alt="cloud">
+    <img class="snow" src="images/snow.png" alt="snow">
 
-
-
-
-
-
-
-
-
-  <h2>My favorite car</h2>
-  <a href="thecarofmydreams.html">The car of my dreams</a>
-  <br>
-  <a href="Contactme.html">My Personal info</a>
+  </div>
+  <div class="middle">
+    <img class="waves" src="images/waves.png" alt="waves">
+    <img class="waves-1" src="images/waves.png" alt="waves">
+    <img class="waves-2" src="images/waves.png" alt="waves">
+    <img class="waves-3" src="images/waves.png" alt="waves">
+    <img class="waves-4" src="images/waves.png" alt="waves">
+    <img class="me" src="images/Me on the beach-2.png" alt="me">
+    <img class="snowcliff" src="images/snowcliff.png" alt="cliff">
+    <h1 class="bio">Bio!</h1>
+    <p class="biotext"> Hi! my name is <span class="span-1">Mario</span>, I am currently a student of college <br> and I am on my first trimester. <br> I'm really excited with my career wich <br> is software engineering because I will be learning a lot of new things. <br> I cant lie but apart of being excited something else called fear is taking my heart <br>the reason of this is that if I don't do well in college my future is going to be affected <br> but I guarantee I will try my best. Anyways, my hobbies are talking to people, <br>riding bikes, play piano or electric bass, repair stuff <br> and last but not least fly airplanes on Xplane 11.</p>
+  </div>
+  <div class="bottom">
+<table class="table">
+  <tr>
+    <th>Food I like</th>
+    <th>Food I don't like</th>
+  </tr>
+  <tr>
+    <td>Sushi🤗</td>
+    <td>Moro🤢</td>
+  </tr>
+  <tr>
+    <td>Spaggetti con camarones🤤</td>
+    <td>Pudin de pasa🤮</td>
+  </tr>
+</table>
+<img class="Mariotime" src="https://media.giphy.com/media/mFSJ9Xt6K09e2jhv7f/giphy.gif" alt="Mario">
+<hr
+class="hr-1">
+  </div>
+  <a class="Info"href="Contactme.html">Click here to send me a message!</a>
+  <p>This website was made by the professional web designer @Mario 2021</p>
 </body>
 
 </html>
