--- a/index.html
+++ b/index.html
@@ -26,32 +26,35 @@
     <img class="waves-2" src="images/waves.png" alt="waves">
     <img class="waves-3" src="images/waves.png" alt="waves">
     <img class="waves-4" src="images/waves.png" alt="waves">
-    <img class="me" src="images/Me on the beach-2.png" alt="me">
     <img class="snowcliff" src="images/snowcliff.png" alt="cliff">
     <h1 class="bio">Bio!</h1>
-    <p class="biotext"> Hi! my name is <span class="span-1">Mario</span>, I am currently a student of college <br> and I am on my first trimester. <br> I'm really excited with my career wich <br> is software engineering because I will be learning a lot of new things. <br> I cant lie but apart of being excited something else called fear is taking my heart <br>the reason of this is that if I don't do well in college my future is going to be affected <br> but I guarantee I will try my best. Anyways, my hobbies are talking to people, <br>riding bikes, play piano or electric bass, repair stuff <br> and last but not least fly airplanes on Xplane 11.</p>
+    <p class="biotext"> Hi! my name is <span class="span-1">Mario</span>, I am currently a student of college <br> and I am on my first trimester. <br> I'm really excited with my career wich <br> is software engineering because I will be learning a
+      lot of new things. <br> I cant lie but apart of being excited something else called fear is taking my heart <br>the reason of this is that if I don't do well in college my future is going to be affected <br> but I guarantee I will try my best.
+      Anyways, my hobbies are talking to people, <br>riding bikes, play piano or electric bass, repair stuff <br> and last but not least fly airplanes on Xplane 11.</p>
+
   </div>
   <div class="bottom">
-<table class="table">
-  <tr>
-    <th>Food I like</th>
-    <th>Food I don't like</th>
-  </tr>
-  <tr>
-    <td>Sushi🤗</td>
-    <td>Moro🤢</td>
-  </tr>
-  <tr>
-    <td>Spaggetti con camarones🤤</td>
-    <td>Pudin de pasa🤮</td>
-  </tr>
-</table>
-<img class="Mariotime" src="https://media.giphy.com/media/mFSJ9Xt6K09e2jhv7f/giphy.gif" alt="Mario">
-<hr
-class="hr-1">
+    <table class="table">
+      <tr>
+        <th>Food I like</th>
+        <th>Food I don't like</th>
+      </tr>
+      <tr>
+        <td>Sushi🤗</td>
+        <td>Moro🤢</td>
+      </tr>
+      <tr>
+        <td>Spaggetti con camarones🤤</td>
+        <td>Pudin de pasa🤮</td>
+      </tr>
+    </table>
+    <img class="Mariotime" src="https://media.giphy.com/media/mFSJ9Xt6K09e2jhv7f/giphy.gif" alt="Mario">
+    <hr class="hr-1">
+    <a class="Info" href="Contactme.html">Click here to send me a message!</a>
   </div>
-  <a class="Info"href="Contactme.html">Click here to send me a message!</a>
-  <p>This website was made by the professional web designer @Mario 2021</p>
+  <div class="end">
+<p class="mytag">This website was made by the professional website designer @Mario</p>
+  </div>
 </body>
 
 </html>
