--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Hi I'm Mario</title>
+  <title>Katherine's Web</title>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" href="favicon.ico">
 </head>
@@ -11,8 +11,9 @@
 <body>
 
   <div class="div-1">
-    <h1 class="">Hi, I'm Mario</h1>
-    <p>A <span class="student">student</span></p>
+    <h1 class="">Hola, soy Katherine</h1>
+    <p>A <span class="student">Estudiante de Ingenieria Industrial</span></p>
+    <img class="Yo" src="" alt="una foto de mi">
     <img class="mountain" src="images/mountain.png" alt="mountainscenery">
     <img class="cloud-left" src="images/cloud.png" alt="cloud">
     <img class="cloud-right-1" src="images/cloud.png" alt="cloud">
@@ -28,24 +29,19 @@
     <img class="waves-4" src="images/waves.png" alt="waves">
     <img class="snowcliff" src="images/snowcliff.png" alt="cliff">
     <h1 class="bio">Bio!</h1>
-    <p class="biotext"> Hi! my name is <span class="span-1">Mario</span>, I am currently a student of college <br> and I am on my first trimester. <br> I'm really excited with my career wich <br> is software engineering because I will be learning a
-      lot of new things. <br> I cant lie but apart of being excited something else called fear is taking my heart <br>the reason of this is that if I don't do well in college my future is going to be affected <br> but I guarantee I will try my best.
-      Anyways, my hobbies are talking to people, <br>riding bikes, play piano or electric bass, repair stuff <br> and last but not least fly airplanes on Xplane 11.</p>
+    <p class="biotext"> Hola, mi nombre es <span class="span-1">Mario</span>, Katherine Rodriguez y mi matrícula es 22-0018 <br> estudio ingeniería industrial. <br> Elegí esta carrera porque a mi me gusta mucho organizar, planificar y coordinar mi vida y entendía que esto lo iba a ver en la carrera.
+     <br> Al pasar el el tiempo me di cuenta que la ingería industrial es más que es una carrera que busca la manera de optimizar y mejora de manera más eficiente y eficaz un sistema que pueda ayudar a una empresa o industria. <br> Ahora mismo estoy en mi cuarto semestre casi quinto y tengo ya un año en la carrera. <br>
+     Mi único pasa tiempo que tengo es ver series o películas <br>cuando el tiempo me lo permite.</p>
 
   </div>
   <div class="bottom">
     <table class="table">
       <tr>
-        <th>Food I like</th>
-        <th>Food I don't like</th>
+        <th>Cosas que me gustan</th>
+       
       </tr>
       <tr>
-        <td>Sushi🤗</td>
-        <td>Moro🤢</td>
-      </tr>
-      <tr>
-        <td>Spaggetti con camarones🤤</td>
-        <td>Pudin de pasa🤮</td>
+        <td>Ver peliculas</td>
       </tr>
     </table>
     <img class="Mariotime" src="https://media.giphy.com/media/mFSJ9Xt6K09e2jhv7f/giphy.gif" alt="Mario">
@@ -53,8 +49,7 @@
     <a class="Info" href="Contactme.html">Click here to send me a message!</a>
   </div>
   <div class="end">
-<p class="mytag">This website was made by the professional website designer @Mario</p>
+<p class="mytag"></p>
   </div>
 </body>
-
 </html>
